FIX: gaps around text in obs settings page

--- a/src/styles/_obs.scss
+++ b/src/styles/_obs.scss
@@ -112,6 +112,14 @@
   }
 }
 
+.text-obs-settings {
+
+  @include media-breakpoint-up($desktop-breakpoint) {
+    padding-left: 10px;
+    padding-right: 10px;
+  }
+}
+
 .obs-filter {
   position: relative;
 }
